[gd_scene load_steps=5 format=3 uid="uid://p3qqm1bwxtd5"]

[ext_resource type="Script" path="res://maps/plains_map.gd" id="1_o4ph0"]
[ext_resource type="PackedScene" uid="uid://bwyp2algxyxbq" path="res://maps/plains.tscn" id="2_rxdwh"]
[ext_resource type="Theme" uid="uid://dehu837rdpqfr" path="res://assets/button_theme.tres" id="3_ixf57"]
[ext_resource type="Script" path="res://enemy_counter.gd" id="4_whalf"]

[node name="Main" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_o4ph0")

[node name="TileMap" parent="." instance=ExtResource("2_rxdwh")]
position = Vector2(192, 48)

[node name="EnemyTimer" type="Timer" parent="."]
autostart = true

[node name="PGTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[node name="PotionTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
y_sort_enabled = true
position = Vector2(332, 177)
zoom = Vector2(2, 2)

[node name="EnemyCounter" type="Label" parent="."]
top_level = true
y_sort_enabled = true
offset_left = 56.0
offset_top = 16.0
offset_right = 1834.0
offset_bottom = 289.0
scale = Vector2(0.08, 0.08)
theme = ExtResource("3_ixf57")
theme_override_colors/font_shadow_color = Color(0.690196, 0.67451, 0.635294, 1)
theme_override_colors/font_outline_color = Color(0.690196, 0.67451, 0.635294, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 50
theme_override_constants/shadow_outline_size = 50
theme_override_font_sizes/font_size = 300
script = ExtResource("4_whalf")

[node name="Sign" type="Label" parent="."]
top_level = true
y_sort_enabled = true
offset_left = 205.0
offset_top = 131.0
offset_right = 2185.0
offset_bottom = 793.0
scale = Vector2(0.08, 0.08)
theme = ExtResource("3_ixf57")
theme_override_colors/font_shadow_color = Color(0.690196, 0.67451, 0.635294, 1)
theme_override_colors/font_outline_color = Color(0.690196, 0.67451, 0.635294, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 50
theme_override_constants/shadow_outline_size = 50
theme_override_font_sizes/font_size = 200

[connection signal="timeout" from="EnemyTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PGTimer" to="." method="_on_pg_timer_timeout"]
[connection signal="timeout" from="PotionTimer" to="." method="_on_potion_timer_timeout"]
